salesforce/usermgmt/main/default/objects/Users__c/Users__c.object-meta.xml
<CustomObject>
    <label>Users</label>
    <nameField>
        <label>users Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>