salesforce/usermgmt/main/default/objects/Users__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>