salesforce/usermgmt/main/default/objects/Users__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>