salesforce/usermgmt/main/default/objects/Users__c/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <label>user_id</label>
    <type>AutoNumber</type>
</CustomField>